@@ -1,3 +1,8 @@
+
+
+• fixed a bug in the LilyPondExport Function (cent deviations) 
+• added function: ApplyValuesFromSeq
+• added function: ExtractEnvSequence
 _________________________________________________________________
 
 v.0.9.4
